# teamtalk-ng

./: .gitignore  .travis.yml  Dockerfile  README.md
server/: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
server/conf/: config.php  log4cxx.properties  msfs.conf
server/containers/teamtalk-ng/: Dockerfile
server/containers/teamtalk-ng-dashboard/: Dockerfile
server/deploy/kubernetes/: README.md
server/deploy/kubernetes/dashboard/: dashboard-cm.yaml  dashboard-deploy.yaml  dashboard-secret.yaml  dashboard-svc.yaml
server/deploy/kubernetes/db-mariadb/: db-cm-ttopen.yaml  db-cm.yaml  db-deploy.yaml  db-pvc.yaml  db-secret.yaml  db-svc.yaml
server/deploy/kubernetes/db-proxy/: db-proxy-cm.yaml  db-proxy-deploy.yaml  db-proxy-svc.yaml
server/deploy/kubernetes/export-ingress/: dashboard-ing.yaml  http-msg-ing.yaml  login-ing.yaml  msfs-ing.yaml
server/deploy/kubernetes/export-lb/: dashboard-lb-svc.yaml  file-lb-svc.yaml  http-msg-lb-svc.yaml  login-lb-svc.yaml  msfs-lb-svc.yaml  msg-lb-svc.yaml
server/deploy/kubernetes/file/: file-cm.yaml  file-deploy.yaml  file-svc.yaml
server/deploy/kubernetes/http-msg/: http-msg-cm.yaml  http-msg-deploy.yaml  http-msg-svc.yaml
server/deploy/kubernetes/login/: login-cm.yaml  login-deploy.yaml  login-svc.yaml
server/deploy/kubernetes/msfs/: msfs-cm.yaml  msfs-deploy.yaml  msfs-pvc.yaml  msfs-svc.yaml
server/deploy/kubernetes/msg/: msg-cm.yaml  msg-deploy.yaml  msg-svc.yaml
server/deploy/kubernetes/redis/: redis-deploy.yaml  redis-pvc.yaml  redis-secret.yaml  redis-svc.yaml
server/deploy/kubernetes/route/: route-cm.yaml  route-deploy.yaml  route-svc.yaml
server/src/: CMakeLists.txt
server/src/base/: CMakeLists.txt  ImPduBase.h  im_conn_util.cpp  util.cpp  util.h  version.h.in
server/src/db_proxy_server/: CMakeLists.txt  DBPool.h
server/src/db_proxy_server/business/: AudioModel.cpp  Login.cpp  SessionModel.cpp  UserModel.cpp
server/src/file_server/: CMakeLists.txt
server/src/http_msg_server/: CMakeLists.txt
server/src/libsecurity/include/: security.h
server/src/libsecurity/src/: CMakeLists.txt
server/src/libsecurity/win/: build.bat
server/src/login_server/: CMakeLists.txt
server/src/msfs/: CMakeLists.txt  FileManager.cpp
server/src/msg_server/: CMakeLists.txt  DBServConn.cpp  MsgConn.h
server/src/push_server/: CMakeLists.txt  main.cpp  push_app.cpp  push_define.h
server/src/route_server/: CMakeLists.txt
server/src/slog/: CMakeLists.txt
