cmake_minimum_required(VERSION 3.12)
PROJECT(slog LANGUAGES CXX)
AUX_SOURCE_DIRECTORY(./ SRC_LIST)

add_library(slog SHARED ${SRC_LIST})
target_compile_definitions(slog PRIVATE -D_REENTRANT -D_FILE_OFFSET_BITS=64 -DAC_HAS_INFO
-DAC_HAS_WARNING -DAC_HAS_ERROR -DAC_HAS_CRITICAL -DTIXML_USE_STL
-DAC_HAS_DEBUG -DLINUX_DAEMON)
target_link_libraries(slog PRIVATE log4cxx)
